Fixed: Bug 36919 - New mail compose: Prefilled mail address gets cut off

--- a/ui/apps/io.ox/core/tk/tokenfield.less
+++ b/ui/apps/io.ox/core/tk/tokenfield.less
@@ -46,6 +46,10 @@
             padding: 0px 5px;
         }
 
+        & > .token-input.tt-hint {
+            width: 100% !important;
+        }
+
         .tt-dropdown-menu {
             min-width: 320px;
             max-height: 200px;
